--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon -w server/index.js server/index.js",
+    "dev": "nodemon server/index.js",
     "build": "next build",
     "start": "SET NODE_ENV=production& node server/index.js"
   },
