--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "axios": "^1.2.0",
+    "body-parser": "^1.20.1",
+    "craiyon": "^1.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "socket.io": "~2.3.0",
-    "socket.io-client": "~2.3.0"
+    "socket.io": "^2.5.0",
+    "socket.io-client": "^2.5.0"
   }
 }
