--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "socket.io": "^2.5.0",
     "socket.io-client": "^2.5.0"
   }
