--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "SET NODE_ENV=production& node server/index.js"
   },
   "dependencies": {
+    "@svgr/webpack": "^8.0.1",
     "axios": "^1.2.0",
     "body-parser": "^1.20.1",
     "craiyon": "^1.0.0",
@@ -17,8 +18,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-particles": "^2.9.3",
+    "react-tsparticles": "^2.9.3",
     "sharp": "^0.32.1",
     "socket.io": "^2.5.0",
-    "socket.io-client": "^2.5.0"
+    "socket.io-client": "^2.5.0",
+    "tsparticles": "^2.9.3"
   }
 }
