--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sharp": "^0.32.1",
     "socket.io": "^2.5.0",
     "socket.io-client": "^2.5.0",
-    "tsparticles": "^2.9.3"
+    "tsparticles": "^2.9.3",
+    "uuidv4": "^6.2.13"
   }
 }
