--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-particles": "^2.9.3",
+    "react-toastify": "^9.1.3",
     "react-tsparticles": "^2.9.3",
     "sharp": "^0.32.1",
     "socket.io": "^2.5.0",
